Avoid double border on open dropdowns in admin top bar

--- a/byceps/blueprints/core_admin/static/style/admin.css
+++ b/byceps/blueprints/core_admin/static/style/admin.css
@@ -184,6 +184,10 @@ main {
   background-color: #ffffff;
 }
 
+#header-content .dropdown ol {
+  margin-top: -1px;
+}
+
 
 /* sidebar */
 
